--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 							</p>
 							<a href="#" class="primary-btn text-uppercase">Get Started</a>
 						</div>
-						<div class="col-lg-4 col-md-6 banner-right">
+						<div class="col-lg-6 col-md-6 mt-5 banner-right">
 							<ul class="nav nav-tabs" id="myTab" role="tablist">
 							  <li class="nav-item">
 							    <a class="nav-link active" id="flight-tab" data-toggle="tab" href="#flight" role="tab" aria-controls="flight" aria-selected="true">Flights</a>
