--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 				<div class="overlay overlay-bg"></div>				
 				<div class="container">
 					<div class="row fullscreen align-items-center justify-content-between">
-						<div class="col-lg-6 col-md-6 banner-left">
+						<div class="col-lg-6 col-md-12 text-center banner-left">
 							<h6 class="text-white">Away from monotonous life</h6>
 							<h1 class="text-white">Magical Travel</h1>
 							<p class="text-white">
@@ -101,15 +101,15 @@
 							</p>
 							<a href="#" class="primary-btn text-uppercase">Get Started</a>
 						</div>
-						<div class="col-lg-6 col-md-6 mt-5 banner-right">
+						<div class="col-lg-6 col-md-12 mt-5 mt-md-0 banner-right">
 							<ul class="nav nav-tabs" id="myTab" role="tablist">
-							  <li class="nav-item">
+							  <li class="nav-item  ">
 							    <a class="nav-link active" id="flight-tab" data-toggle="tab" href="#flight" role="tab" aria-controls="flight" aria-selected="true">aller simple</a>
 							  </li>
-							  <li class="nav-item">
+							  <li class="nav-item ">
 							    <a class="nav-link" id="hotel-tab" data-toggle="tab" href="#hotel" role="tab" aria-controls="hotel" aria-selected="false">aller retour</a>
 							  </li>
-							  <li class="nav-item">
+							  <li class="nav-item ">
 							    <a class="nav-link" id="holiday-tab" data-toggle="tab" href="#holiday" role="tab" aria-controls="holiday" aria-selected="false">circuit</a>
 							  </li>
 							  <li class="nav-item">
@@ -119,51 +119,68 @@
 							<div class="tab-content" id="myTabContent">
 							  <div class="tab-pane fade show active" id="flight" role="tabpanel" aria-labelledby="flight-tab">
 								<form class="form-wrap">
-									<input type="text" class="form-control" name="name" placeholder="From " onfocus="this.placeholder = ''" onblur="this.placeholder = 'From '">									
-									<input type="text" class="form-control" name="to" placeholder="To " onfocus="this.placeholder = ''" onblur="this.placeholder = 'To '">
-									<input type="text" class="form-control date-picker" name="start" placeholder="Start " onfocus="this.placeholder = ''" onblur="this.placeholder = 'Start '">
+									<div class="row">
+										<input type="text" class="form-control col-6" name="name" placeholder="From " onfocus="this.placeholder = ''" onblur="this.placeholder = 'From '">									
+										<input type="text" class="form-control col-6" name="to" placeholder="To " onfocus="this.placeholder = ''" onblur="this.placeholder = 'To '">
+										<input type="text" class="form-control col-6 date-picker" name="start" placeholder="Start " onfocus="this.placeholder = ''" onblur="this.placeholder = 'Start '">
+										<input type="time" class="form-control col-6" name="Heure" placeholder="Heure " onfocus="this.placeholder = ''" onblur="this.placeholder = 'Heure '">
+										<input type="text" class="form-control col-6" name="occasion" placeholder="Occasion " onfocus="this.placeholder = ''" onblur="this.placeholder = 'occasion '">	
 
-									<input type="text" class="form-control" name="name" placeholder="Occasion " onfocus="this.placeholder = ''" onblur="this.placeholder = 'occasion '">	
-
-									<input type="number" min="1" max="20" class="form-control" name="adults" placeholder="Adults " onfocus="this.placeholder = ''" onblur="this.placeholder = 'Adults '">
-									<input type="number" min="1" max="20" class="form-control" name="child" placeholder="Child " onfocus="this.placeholder = ''" onblur="this.placeholder = 'Child '">							
+										<input type="number" min="1" max="20" class="form-control col-6" name="adults" placeholder="Adults " onfocus="this.placeholder = ''" onblur="this.placeholder = 'Adults '">
+										<input type="number" min="1" max="20" class="form-control col-6" name="child" placeholder="Child " onfocus="this.placeholder = ''" onblur="this.placeholder = 'Child '">							
+									</div>
 									<a href="#" class="primary-btn text-uppercase">Reserve</a>									
 								</form>
 							  </div>
 							  <div class="tab-pane fade" id="hotel" role="tabpanel" aria-labelledby="hotel-tab">
 								<form class="form-wrap">
-									<input type="text" class="form-control" name="name" placeholder="From " onfocus="this.placeholder = ''" onblur="this.placeholder = 'From '">									
-									<input type="text" class="form-control" name="to" placeholder="To " onfocus="this.placeholder = ''" onblur="this.placeholder = 'To '">
-									<input type="text" class="form-control date-picker" name="start" placeholder="Start " onfocus="this.placeholder = ''" onblur="this.placeholder = 'Start '">
-									<input type="text" class="form-control date-picker" name="start" placeholder="Return " onfocus="this.placeholder = ''" onblur="this.placeholder = 'Return '">
+									<div class="row">
+										<input type="text" class="form-control col-6" name="name" placeholder="From " onfocus="this.placeholder = ''" onblur="this.placeholder = 'From '">									
+										<input type="text" class="form-control col-6" name="to" placeholder="To " onfocus="this.placeholder = ''" onblur="this.placeholder = 'To '">
+										<input type="text" class="form-control col-6 date-picker" name="start" placeholder="Start " onfocus="this.placeholder = ''" onblur="this.placeholder = 'Start '">
+										<input type="time" class="form-control col-6" name="Heure" placeholder="Heure " onfocus="this.placeholder = ''" onblur="this.placeholder = 'Heure '">
 
-									<input type="text" class="form-control" name="name" placeholder="Occasion " onfocus="this.placeholder = ''" onblur="this.placeholder = 'occasion '">	
+										<input type="text" class="form-control col-6 date-picker" name="start" placeholder="Return " onfocus="this.placeholder = ''" onblur="this.placeholder = 'Return '">
+										<input type="time" class="form-control col-6" name="Heure" placeholder="Heure " onfocus="this.placeholder = ''" onblur="this.placeholder = 'Heure '">
 
-									<input type="number" min="1" max="20" class="form-control" name="adults" placeholder="Adults " onfocus="this.placeholder = ''" onblur="this.placeholder = 'Adults '">
-									<input type="number" min="1" max="20" class="form-control" name="child" placeholder="Child " onfocus="this.placeholder = ''" onblur="this.placeholder = 'Child '">							
+										<input type="text" class="form-control col-6" name="name" placeholder="Occasion " onfocus="this.placeholder = ''" onblur="this.placeholder = 'occasion '">	
+
+										<input type="number" min="1" max="20" class="form-control col-6" name="adults" placeholder="Adults " onfocus="this.placeholder = ''" onblur="this.placeholder = 'Adults '">
+										<input type="number" min="1" max="20" class="form-control col-6" name="child" placeholder="Child " onfocus="this.placeholder = ''" onblur="this.placeholder = 'Child '">							
+									</div>
 									<a href="#" class="primary-btn text-uppercase">Reserve</a>									
 								</form>					  	
 							  </div>
 							  <div class="tab-pane fade" id="holiday" role="tabpanel" aria-labelledby="holiday-tab">
 								<form class="form-wrap">
-									<input type="text" class="form-control" name="name" placeholder="From " onfocus="this.placeholder = ''" onblur="this.placeholder = 'From '">									
-									<input type="text" class="form-control" name="to" placeholder="To " onfocus="this.placeholder = ''" onblur="this.placeholder = 'To '">
-									<input type="text" class="form-control date-picker" name="start" placeholder="Start " onfocus="this.placeholder = ''" onblur="this.placeholder = 'Start '">
-									<input type="text" class="form-control date-picker" name="start" placeholder="Return " onfocus="this.placeholder = ''" onblur="this.placeholder = 'Return '">		
-									<input type="text" class="form-control" name="name" placeholder="Occasion " onfocus="this.placeholder = ''" onblur="this.placeholder = 'occasion '">	
-									<input type="number" min="1" max="20" class="form-control" name="adults" placeholder="Adults " onfocus="this.placeholder = ''" onblur="this.placeholder = 'Adults '">
-									<input type="number" min="1" max="20" class="form-control" name="child" placeholder="Child " onfocus="this.placeholder = ''" onblur="this.placeholder = 'Child '">							
+									<div class="row">
+										<input type="text" class="form-control col-6" name="name" placeholder="From " onfocus="this.placeholder = ''" onblur="this.placeholder = 'From '">									
+										<input type="text" class="form-control col-6" name="to" placeholder="To " onfocus="this.placeholder = ''" onblur="this.placeholder = 'To '">
+										<input type="text" class="form-control col-6 date-picker" name="start" placeholder="Start " onfocus="this.placeholder = ''" onblur="this.placeholder = 'Start '">
+										<input type="text" class="form-control col-6 date-picker" name="start" placeholder="Return " onfocus="this.placeholder = ''" onblur="this.placeholder = 'Return '">		
+										<input type="text" class="form-control col-6" name="name" placeholder="Occasion " onfocus="this.placeholder = ''" onblur="this.placeholder = 'occasion '">	
+										<input type="number" min="1" max="20" class="form-control col-6" name="adults" placeholder="Adults " onfocus="this.placeholder = ''" onblur="this.placeholder = 'Adults '">
+										<input type="number" min="1" max="20" class="form-control col-6" name="child" placeholder="Child " onfocus="this.placeholder = ''" onblur="this.placeholder = 'Child '">							
+									</div>
 									<a href="#" class="primary-btn text-uppercase">Reserve</a>									
 								</form>									  	
 							  </div>
 							  <div class="tab-pane fade" id="transfirt" role="tabpanel" aria-labelledby="transfirt-tab">
 								<form class="form-wrap">
-									<input type="text" class="form-control" name="name" placeholder="From " onfocus="this.placeholder = ''" onblur="this.placeholder = 'From '">									
-									<input type="text" class="form-control" name="to" placeholder="To " onfocus="this.placeholder = ''" onblur="this.placeholder = 'To '">
-									<input type="text" class="form-control date-picker" name="start" placeholder="Start " onfocus="this.placeholder = ''" onblur="this.placeholder = 'Start '">
-									<input type="number" min="1" max="20" class="form-control" name="adults" placeholder="Adults " onfocus="this.placeholder = ''" onblur="this.placeholder = 'Adults '">
-									<input type="number" min="1" max="20" class="form-control" name="child" placeholder="Child " onfocus="this.placeholder = ''" onblur="this.placeholder = 'Child '">	
-									<input type="text" class="form-control" name="name" placeholder="Numero de Vol   " onfocus="this.placeholder = ''" onblur="this.placeholder = 'Numero '">							
+									<div class="row">
+										<input type="text" class="form-control col-6" name="name" placeholder="From " onfocus="this.placeholder = ''" onblur="this.placeholder = 'From '">									
+										<input type="text" class="form-control col-6" name="to" placeholder="To " onfocus="this.placeholder = ''" onblur="this.placeholder = 'To '">
+									</div>
+									<div class="row">
+										<input type="text" class="form-control col-6 date-picker" name="start" placeholder="Start " onfocus="this.placeholder = ''" onblur="this.placeholder = 'Start '">
+										<input type="time" class="form-control col-6" name="Heure" placeholder="Heure " onfocus="this.placeholder = ''" onblur="this.placeholder = 'Heure '">
+									</div>
+									<div class="row">
+										<input type="number" min="1" max="20" class="form-control col-6" name="adults" placeholder="Adults " onfocus="this.placeholder = ''" onblur="this.placeholder = 'Adults '">
+										<input type="number" min="1" max="20" class="form-control col-6" name="child" placeholder="Child " onfocus="this.placeholder = ''" onblur="this.placeholder = 'Child '">	
+									
+										<input type="text" class="form-control col-6" name="name" placeholder="Numero de Vol   " onfocus="this.placeholder = ''" onblur="this.placeholder = 'Numero '">							
+									</div>
 									<a href="#" class="primary-btn text-uppercase">Reserve</a>									
 								</form>									  	
 							  </div>
