--- a/index.html
+++ b/index.html
@@ -82,17 +82,17 @@
 				<div class="container">
 					<div class="row fullscreen align-items-center ">
 						
-						<div class="col-lg-12 col-md-12 text-center banner-left">
-							<h6 class="text-white">Away from monotonous life</h6>
-							<h1 class="text-white">Lobus</h1>
-							<p class="text-white ">
-								If you are looking at blank cassettes on the web, you may be very confused at the difference in price. You may see some for as low as $.17 each.
+						<div class="col-lg-12 col-md-12 text-center banner-left mb-md-5">
+							<!--<h6 class="text-white">Away from monotonous life</h6>-->
+							<h1 class="text-white mt-5">Lobus</h1>
+							<p class="text-white" style="font-size:18px;">
+								Rechercher des offres sur des transport indépendants et plus encore
 							</p>
 						<!--	<a href="#" class="primary-btn text-uppercase">Get Started</a>-->
 						</div>
 						<div class="col-lg-12 col-md-12 mt-5 mt-md-0 banner-right">
 							<ul class="nav nav-tabs" id="myTab" role="tablist">
-							  <li class="nav-item  ">
+							  <li class="nav-item">
 							    <a class="nav-link active" id="flight-tab" data-toggle="tab" href="#flight" role="tab" aria-controls="flight" aria-selected="true">aller simple</a>
 							  </li>
 							  <li class="nav-item ">
