--- a/index.html
+++ b/index.html
@@ -91,20 +91,20 @@
 						<!--	<a href="#" class="primary-btn text-uppercase">Get Started</a>-->
 						</div>
 						<div class="col-lg-12 col-md-12 mt-5 mt-md-0 banner-right">
-							<ul class="nav nav-tabs" id="myTab" role="tablist">
-							  <li class="nav-item">
-							    <a class="nav-link active" id="flight-tab" data-toggle="tab" href="#flight" role="tab" aria-controls="flight" aria-selected="true">aller simple</a>
-							  </li>
-							  <li class="nav-item ">
-							    <a class="nav-link" id="hotel-tab" data-toggle="tab" href="#hotel" role="tab" aria-controls="hotel" aria-selected="false">aller retour</a>
-							  </li>
-							  <li class="nav-item ">
-							    <a class="nav-link" id="holiday-tab" data-toggle="tab" href="#holiday" role="tab" aria-controls="holiday" aria-selected="false">circuit</a>
-							  </li>
-							  <li class="nav-item">
-							    <a class="nav-link" id="transfirt-tab" data-toggle="tab" href="#transfirt" role="tab" aria-controls="transfirt" aria-selected="false">transfert aéroport </a>
-							  </li>
-							</ul>
+							<ul class="nav nav-tabs form-tabs " id="myTab" role="tablist">
+								<li class="nav-item border border-1 rounded-pill ">
+								  <a class="nav-link active" id="flight-tab" data-toggle="tab" href="#flight" role="tab" aria-controls="flight" aria-selected="true">aller simple</a>
+								</li>
+								<li class="nav-item border border-1 ">
+								  <a class="nav-link" id="hotel-tab" data-toggle="tab" href="#hotel" role="tab" aria-controls="hotel" aria-selected="false">aller retour</a>
+								</li>
+								<li class="nav-item border border-1 ">
+								  <a class="nav-link" id="holiday-tab" data-toggle="tab" href="#holiday" role="tab" aria-controls="holiday" aria-selected="false">circuit</a>
+								</li>
+								<li class="nav-item border border-1">
+								  <a class="nav-link" id="transfirt-tab" data-toggle="tab" href="#transfirt" role="tab" aria-controls="transfirt" aria-selected="false">transfert aéroport </a>
+								</li>
+							  </ul>
 							<div class="tab-content" id="myTabContent">
 							  <div class="tab-pane fade show active" id="flight" role="tabpanel" aria-labelledby="flight-tab">
 								<form class="form-wrap">
